<resources>
    <string name="app_name">BloomKitchen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">For You</string>
    <string name="title_tab_cart">Your Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="name">Hai Bella,</string>
    <string name="greetings">Mau makan apa hari ini?</string>
    <string name="title_banner">Diskon 50%</string>
    <string name="desc_banner">Penawaran istimewa! Nikmati diskon 50% untuk pembelian Anda!</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_phone_number">No. Telepon</string>
    <string name="header_cart">Cart</string>
    <string name="add_to_cart_price">Tambah ke Keranjang - %1$s</string>
    <string name="add_to_cart_total_price">Tambah ke Keranjang - %1$s\n</string>
    <string name="quantity_item">1</string>
    <string name="title_location">Lokasi</string>
    <string name="text_hint_notes">Catatan : </string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_checkout">Pesan</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Ambil Sendiri</string>
    <string name="text_delivery">Dikirim</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="order_confirmation">Konfirmasi Pesanan</string>
    <string name="tv_order_success">Pesanan Berhasil</string>
    <string name="back_to_home">Back to Home</string>
    <string name="title_transaction">No. Transaksi</string>
    <string name="title_date">Tanggal</string>
    <string name="title_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">No. Telepon</string>
    <string name="btn_register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Sudah punya akun? Login disini</string>
    <string name="text_error_name_cannot_empty">Username tidak boleh kosong</string>
    <string name="text_error_password_empty">Password tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Password tidak boleh kurang dari 8 karakter</string>
    <string name="text_password_does_not_match">Password tidak sesuai</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Masukkan email sesuai format</string>
    <string name="text_highlight_login_here">Login disini</string>
    <string name="not_registered">Belum punya akun? Daftar disini</string>
    <string name="login">Login</string>
    <string name="highlight_register">Daftar disini</string>
    <string name="text_error_phone_number_cannot_empty">No. telepon tidak boleh kosong</string>
    <string name="login_failed">Login Gagal %1$s</string>
    <string name="text_logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="error_checkout">Error Checkout</string>
    <string name="create_order_success">Create Order Success</string>
    <string name="close">Close</string>
    <string name="text_on_menu_data_empty">Menu is Empty</string>
    <string name="greetings_name">Hai, %1$s</string>
    <string name="category_is_empty">Category is Empty</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="greetings_guest">Hai, Guest</string>
    <string name="save">Simpan</string>
    <string name="confirm_update">Simpan Perubahan?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="error_name_is_not_change">Nama tidak berubah</string>
    <string name="accept_update">Perubahan Disimpan</string>
    <string name="text_error">error %1$s</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_change_password">Anda Yakin Ingin Mengubah Password?</string>
    <string name="text_back">Back</string>
    <string name="new_password">New Password</string>
    <string name="error">error %1$s</string>
    <string name="confirm_update_password">Anda Yakin Mengubah Password?</string>
    <string name="oke">Oke</string>
    <string name="dialog_dialog_req_update_password">Permintaan perubahan password telah dikirim ke email anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Masukkan Email Anda</string>
    <string name="send">Kirim</string>
    <string name="cancel">Batal</string>
    <string name="title_list_menu">List Menu Makanan</string>
    <string name="profile">Profile</string>
</resources>