<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.cart.CartFragment">

    <include
        android:id="@+id/profile_header"
        layout="@layout/layout_header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/profile_data"
        layout="@layout/layout_profile"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_header"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/save"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:background="@drawable/button_rounded"
        app:layout_constraintTop_toBottomOf="@id/profile_data"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/text_logout"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>