<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_dialog"
    android:layout_width="match_parent"
    app:cardCornerRadius="16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dialog"
        android:layout_width="match_parent"
        android:padding="32dp"
        android:background="@drawable/bg_rounded_border_transparant"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_success"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_checklist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_order_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textStyle="bold"
            android:text="@string/tv_order_success"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_success" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tv_order_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_success">

            <TextView
                android:id="@+id/tv_title_transaction_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_transaction"/>

            <TextView
                android:id="@+id/tv_transaction_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="129374283428343"/>

            <TextView
                android:id="@+id/tv_title_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_transaction_number"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_date"/>

            <TextView
                android:id="@+id/tv_transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_title_date"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="30 Maret 2024"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/md_theme_light_inverseOnSurface"
            app:layout_constraintTop_toBottomOf="@id/tv_order_data"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_summary_order"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line"
            tools:listitem="@layout/item_price" />


        <Button
            android:id="@+id/btn_back_to_home"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_rounded"
            android:text="@string/text_back"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>